# goit-ds-hw-02

./: pyproject.toml
src/: add.py  delete.py  seed.py  select.py  task.db  task.sql  update.py
